--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "api": "^5.0.8",
     "axios": "^1.3.5",
     "bcrypt": "^5.1.0",
+     "dotenv": "^16.3.1",
     "codemirror": "^5.50.2",
     "cor": "0.0.0",
     "core-js": "^3.8.3",
